Adjust test parallelism